<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_fragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/movies"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#56ADF2"
        android:foregroundGravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#56ADF2"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/movies"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tvShows"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#56ADF2"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#56ADF2"
            android:padding="15dp"
            android:text="@string/tv_shows"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tvSpeacials"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#56ADF2"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#56ADF2"
            android:padding="15dp"
            android:text="@string/tv_special"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sourceOtt"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#56ADF2"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShows">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#56ADF2"
            android:padding="15dp"
            android:text="@string/source_ott"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/about"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvSpeacials"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeacials" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about_Watch_mode_api"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sourceOtt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>